--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -297,6 +297,13 @@ img
       width: w = 6rem
       height: w
 
+  #top-container
+    #post-title
+      font-size: 1.1rem
+
+  #post-title
+    font-size: 1.1rem
+
 @media screen and (min-width: $sm)
   #top-container
     #post-title
